<resources>
    <string name="app_name">HangSpot</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="groups">Groups</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="submit">Submit</string>
    <string name="submitted">Submitted</string>
    <string name="group_name">Group Name</string>
    <string name="enter_location">Please Enter Your Location:</string>
    <string name="view_map">View Map</string>
    <string name="name">Name*</string>
    <string name="description">Description</string>
    <string name="enter_a_location_candidate">Enter a location candidate:</string>
    <string name="location_candidates">Location Candidates</string>
    <string name="add_candidates">Add Candidates</string>
    <string name="done_adding">Done Adding</string>
    <string name="submit_ranking">Submit Ranking</string>
    <string name="final_location">Final Location</string>
    <string name="voting">Voting</string>
    <string name="voting_instructions">Rank your preferences from top to bottom.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_groups">No groups yet! Create one by clicking the Compose tab below!</string>
    <string name="no_candidates">No candidates yet! Add one by clicking the add button below.</string>
</resources>